# low-latency-lab

./: LICENSE  README.md
simd/: CMakeLists.txt  README.md
simd/sample/: input_sample.txt
simd/src/: lottery_input_reader.h  lottery_processor.h  main.cpp
simd/tests/: test_lottery_input_reader.cpp  test_lottery_processor.cpp
soa-vs-aos/: CMakeLists.txt  README.md
soa-vs-aos/src/: lottery_input_reader.h  lottery_processor.h  utils.h
soa-vs-aos/tests/: test_lottery_input_reader.cpp  test_lottery_processor.cpp
